--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
 
+
+  <title>Web開発の練習２</title>
+ 
+
+  
+</head>
+<body>
+ 
+
+  <h1>練習問題2.4</h1>
+ 
+  
+</body>
+  
+</html>
