--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 
 
-  <title>Web開発の練習２</title>
+  <title>Web開発の練習2024秋季</title>
+  <link rel="stylesheet" "href="mystyle.css"><!--この行を追加-->
  
 
   
