--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 
   <title>Web開発の練習2024秋季</title>
+  <link rel="stylesheet" href="mystyle.css">
    <link rel="stylesheet" "href="mystyle.css"><!--この行を追加-->
  
 
