--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>Web開発の練習2024秋季</title>
   <link rel="stylesheet" href="mystyle.css"><!--この行を追加-->
+  <script src="myjs.js"></script><!--この行を追加-->
  
 
   
