--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="mystyle.css"><!--この行を追加-->
   <script src="myjs.js"></script><!--この行を追加-->
  
-
+<script src="ex6-1.js"></script>
   
 </head>
 <body>
@@ -45,7 +45,8 @@
     <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
 　<p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
 　<p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
- 
+
+  練習問題6.2
  <!--<h1>イベントハンドラの練習</h1>
  <input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoto!');">-->
 </body>
