--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
     <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
 　<p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
 　<p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
-
-  練習問題6.2
  <!--<h1>イベントハンドラの練習</h1>
- <input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoto!');">-->
+ <input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoto!');">-->[
+
+  練習問題6.1
+<input type="button" value="ここをクリック" onclick="sayhello61();">
 </body>
   
 </html>
