--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
   練習問題6.1
 <input type="button" value="ここをクリック" onclick="sayhello61();">
+
+  練習問題6.1
+  <input type="button" value="ここをクリック" onclick=sayhello61();sayhello61();">
 </body>
   
 </html>
