--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <input type="button" value="ここをクリック" onclick="sayhello61();">
 
   練習問題6.1
-  <input type="button" value="ここをクリック" onclick=sayhello61();sayhello61();">
+  <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
 </body>
   
 </html>
