--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 
   練習問題6.1
   <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
+
+  <br>
+
+  練習問題6.4
+  <input type="button" value="ここをクリック" onclick="saygoodbye();">
   
 </body>
   
