--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
  <!--<h1>イベントハンドラの練習</h1>
  <input type="button" value="ここをクリック" ondblclick="alert('Hello,Ryoto!');">-->[
 
-  練習問題6.1
+ <h1 練習問題6.1 >
 <input type="button" value="ここをクリック" onclick="sayhello61();">
 
   <br>
 
-  練習問題6.2
+  <h1 練習問題6.2 >
   <input type="button" value="ここをクリック" onclick="sayhello61();sayhello61();">
 
   <br>
 
-  練習問題6.4
+  <h1 練習問題6.4 >
   <input type="button" value="ここをクリック" onclick="saygoodbye();">
   
 </body>
