--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="myjs.js"></script><!--この行を追加-->
  
 <script src="ex6-1.js"></script>
+  <script src="ex06-5.js"></script>
   
 </head>
 <body>
@@ -60,6 +61,12 @@
 
   <h1>練習問題6.4</h1>
   <input type="button" value="ここをクリック" onclick="saygoodbye();">
+
+  <h1>練習問題6.5</h1>
+  <input type="button" value="あいさつ" onclick="sayhello65();">
+  <input type="button" value="太郎" onclick="taro65();">
+<input type="button" value="花子" onclick="hanako65();">
+  
   
 </body>
   
