--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 
   <h1>練習問題6-7 引数の練習</h1>
   <input type="button" value="あいさつ" onclick="sayhello67();">
-  <input type="button" value="太郎" onclick="someone('太郎');">
-<input type="button" value="花子" onclick="someone('花子');">
-<input type="button" value="レイ" onclick="someone('レイ');">
-  <input type="button" value="シンジ" onclick="someone('シンジ');">
-  <input type="button" value="アスカ" onclick="someone('アスカ');">
+  <input type="button" value="太郎" onclick="someone('太郎');sayhello67();">
+<input type="button" value="花子" onclick="someone('花子');sayhello67();">
+<input type="button" value="レイ" onclick="someone('レイ');sayhello67();">
+  <input type="button" value="シンジ" onclick="someone('シンジ');sayhello67();">
+  <input type="button" value="アスカ" onclick="someone('アスカ');sayhello67();">
   
 </body>
   
