--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <h1>練習問題6.4</h1>
   <input type="button" value="ここをクリック" onclick="saygoodbye();">
 
-  <h1>練習問題6.5</h1>
+  <h1>練習問題6.5 6.6</h1>
   <input type="button" value="あいさつ" onclick="sayhello65();">
   <input type="button" value="太郎" onclick="taro65();taro66();">
 <input type="button" value="花子" onclick="hanako65();hanako66();">
