--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="ex6-1.js"></script>
   <script src="ex6-5.js"></script>
   <script src="ex6-7.js"></script>
+  <script src="ex06-8.js"></script>
   
 </head>
 <body>
@@ -75,6 +76,13 @@
 <input type="button" value="レイ" onclick="someone('レイ');sayhello67();">
   <input type="button" value="シンジ" onclick="someone('シンジ');sayhello67();">
   <input type="button" value="アスカ" onclick="someone('アスカ');sayhello67();">
+
+  <h1>練習問題6-8 JavaScriptによる変更の練習</h1>
+  <input type="button" value="あいさつ" onclick="sayhello68();">
+  <input type="button" value="太郎" onclick="taro68();">
+    <input type="button" value="花子" onclick="hanako68();">
+  <p id="who68">world</p>
+  
   
 </body>
   
