--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
   <h1>練習問題6-88InnerHTMLによる変更の練習</h1>
   <input type="button" value="画像変更" onclick="gazo688();">
   <p id="who688"><img src="./image/neko.png" alt="オフ"></p>
+
+  <h1>練習問題6-9 JavaScriptによるページの変更</h1>
+  <div id="txt1">
+    <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
   
 
   
