--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
   <h1>練習問題6-9 JavaScriptによるページの変更</h1>
   <div id="txt1">
     <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
+
+
+  <h1>練習問題6-10</h1>
+  <input type="button" value="画像の変更" onclick="imachange1();">
+  <img src='./image/happamagao.png' id="logo" alt="Happa Logo">
   
 
   
