--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
   <h1>練習問題6-10</h1>
-  <input type="button" value="画像の変更" onclick="imachange1();">
+  <input type="button" value="画像の変更" onclick="imgchange1();">
   <img src='./image/happamagao.png' id="logo" alt="Happa Logo">
   
 
