--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
 
 
-  <h1>練習問題6-10</h1>
+ <!-- <h1>練習問題6-10</h1>
   <input type="button" value="画像の変更" onclick="imgchange1();">
-  <img src='./image/happamagao.png' id="logo" alt="Happa Logo">
+  <img src='./image/happamagao.png' id="logo" alt="Happa Logo">-->
   
 
   
