--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="ex6-7.js"></script>
   <script src="ex06-8.js"></script>
   <script src="ex06-9.js"></script>
+  <script src="ex06-10.js"></script>
   
 </head>
 <body>
@@ -93,9 +94,9 @@
     <input type="button" value="テキストの変更" onclick="txtchange1();">城西大学</div>
 
 
- <!-- <h1>練習問題6-10</h1>
+ <h1>練習問題6-10</h1>
   <input type="button" value="画像の変更" onclick="imgchange1();">
-  <img src='./image/happamagao.png' id="logo" alt="Happa Logo">-->
+  <img src='./image/happamagao.png' id="logo" alt="Happa Logo">
 
   
 
