--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
  <h1>練習問題6-10</h1>
   <input type="button" value="画像の変更" onclick="imgchange1();">
   <img src='./image/happamagao.png' id="logo" alt="Happa Logo">
+  <input type="button" value="元に戻す" onclick="imgchange2();">
 
   
 
