--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Web開発の練習2024秋季</title>
   <link rel="stylesheet" href="mystyle.css"><!--この行を追加-->
   <script src="myjs.js"></script><!--この行を追加-->
+
+  
  
 <script src="ex6-1.js"></script>
   <script src="ex6-5.js"></script>
@@ -98,6 +100,12 @@
   <input type="button" value="画像の変更" onclick="imgchange1();">
   <img src='./image/happamotonokao.png' id="logo" alt="Happa Logo">
   <input type="button" value="元に戻す" onclick="imgchange2();">
+
+  <h1>練習問題6-11</h1>
+  <input type="button" value="画像の変更" onclick="imagchange1();">
+  <img src='./image/josairogo.png' id="logo" alt="josai Logo" class="imagechange">
+
+ 
 
   
 
