--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <h1>練習問題6-11</h1>
   <input type="button" value="画像の変更" onclick="imagchange3();">
-  <img src='./image/josairogo.png' id="logo" alt="josai Logo" class="imagechange">
+  <img src='./image/josairogo.png' id="logo1" alt="josai Logo" class="imagechange">
   <input type="button" value="元に戻す" onclick="imgchange4();">
 
  
