--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="mystyle.css"><!--この行を追加-->
   <script src="myjs.js"></script><!--この行を追加-->
 
+  <link rel="stylesheet" href="imagechange.css">
+
   
  
 <script src="ex6-1.js"></script>
