--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
  <h1>練習問題6-10</h1>
   <input type="button" value="画像の変更" onclick="imgchange1();">
-  <img src='./image/happamotonokao.png' id="logo" alt="Happa Logo">
+  <img src='./image/happamotonokao.png' id="logo" alt="Happa Logo" class="change">
   <input type="button" value="元に戻す" onclick="imgchange2();">
 
   <h1>練習問題6-11</h1>
