--- a/index.html
+++ b/index.html
@@ -108,7 +108,11 @@
   <img src='./image/josairogo.png' id="logo1" alt="josai Logo" class="imagechange">
   <input type="button" value="元に戻す" onclick="imgchange4();">
 
- 
+  <h1>練習問題6-12</h1>
+ <form name="timer">
+   <input type="button" value="スタート" onclick="startfnc()">
+   <br>
+   <input type="text" name="moji" size="30" value=""></form>
 
   
 
