--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="ex06-8.js"></script>
   <script src="ex06-9.js"></script>
   <script src="ex06-10.js"></script>
+  <script src="ex06-12.js"></script>
   
 </head>
 <body>
