--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
    <br>
    <input type="text" name="moji" size="30" value=""></form>
 
+  <h1>練習問題6-13</h1>
+  <form><input type="button" value="Timer" onclick="setTimeout('mes()',3000)"></form>
   
 
   
