--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="ex06-9.js"></script>
   <script src="ex06-10.js"></script>
   <script src="ex06-12.js"></script>
+   <script src="ex06-13.js"></script>
   
 </head>
 <body>
