--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
     <br>
     <input type="text" name="moji13" size="30" value="">
   </form>
-  
+
+
+  <h1>練習問題6-14</h1>
+   <img src='./image/happamotonokao.png' alt="Happa Logo2">
+ <form><input type="button" value="スタート" onclick="imgchange5();setTimeout('happa()',3000)"></form>
 
   
   
