--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="ex06-10.js"></script>
   <script src="ex06-12.js"></script>
    <script src="ex06-13.js"></script>
+   <script src="ex06-14.js"></script>
   
 </head>
 <body>
