--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
   <h1>練習問題6-14</h1>
-   <img src='./image/happamotonokao.png' alt="Happa Logo2">
+   <img src='./image/happamotonokao.png' id="logo2" alt="Happa Logo2">
  <form><input type="button" value="スタート" onclick="imgchange5();setTimeout('happa()',3000)"></form>
 
   
