--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
   <h1>練習問題6-14</h1>
-   <form><input type="button" value="スタート" onclick="imgchange5();setTimeout('happa()',3000)"></form> 
+   <form><input type="button" value="画像の変更" onclick="imgchange5();setTimeout('happa()',3000)"></form> 
    <img src='./image/happamotonokao.png' id="logo2" alt="Happa Logo2">
 
 
