--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="ex06-12.js"></script>
    <script src="ex06-13.js"></script>
    <script src="ex06-14.js"></script>
+    <script src="ex07-1.js"></script>
   
 </head>
 <body>
@@ -131,6 +132,10 @@
   <h1>練習問題6-14</h1>
   <img src='./image/happamotonokao.png' id="logo2" alt="Happa Logo2">
    <form><input type="button" value="画像の変更" onclick="imgchange5();setTimeout('happa()',3000)"></form> 
+
+  <h1>練習問題7-1</h1>
+  <input type="button" value="あいさつ" onclick="sayhello71();">
+  <p>誰？<input type="text" id="who71"></p>
  
 
 
