--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
    <script src="ex06-13.js"></script>
    <script src="ex06-14.js"></script>
     <script src="ex07-1.js"></script>
+    <script src="ex07-2.js"></script>
+  
   
 </head>
 <body>
@@ -136,6 +138,13 @@
   <h1>練習問題7-1</h1>
   <input type="button" value="あいさつ" onclick="sayhello71();">
   <p>誰？<input type="text" id="who71"></p>
+
+  <h1>練習問題7-2 足し算</h1>
+  <p>
+    <input type="text" id="input1">+<input type="text" id="input2">
+    <input type="button" value="計算" onclick="add();">
+  </p>
+  
  
 
 
