--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    <script src="ex06-14.js"></script>
     <script src="ex07-1.js"></script>
     <script src="ex07-2.js"></script>
+   <script src="ex07-3.js"></script>
   
   
 </head>
@@ -143,6 +144,12 @@
   <p>
     <input type="text" id="input1">+<input type="text" id="input2">
     <input type="button" value="計算" onclick="add();">
+  </p>
+
+  <h1>練習問題7-3 ボディマス指数</h1>
+  <p>
+    体重（㎏）<input type="text" id="input1">/身長（ｍ）<input type="text" id="input2">^2
+    <input type="button" value="計算" onclick="BMI();">
   </p>
   
  
