--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
   <h1>練習問題7-3 ボディマス指数</h1>
   <p>
-    体重（㎏）<input type="text" id="input1">/身長（ｍ）<input type="text" id="input2">^2
+    体重（㎏）<input type="text" id="input3">/（身長（ｍ）<input type="text" id="input4">^2）
     <input type="button" value="計算" onclick="BMI();">
   </p>
   
