--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="ex07-1.js"></script>
     <script src="ex07-2.js"></script>
    <script src="ex07-3.js"></script>
+   <script src="ex07-4.js"></script>
   
   
 </head>
@@ -151,8 +152,13 @@
     体重（㎏）<input type="text" id="input3">/（身長（ｍ）<input type="text" id="input4">^2）
     <input type="button" value="計算" onclick="BMI();">
   </p>
-  
- 
+
+  <h1>練習問題7-4　なぞなぞ</h1>
+  <p>目を閉じてないと見られないものはなーに？</p>
+ <p>
+   答（漢字1文字で）:<input type="text" id="answer">
+   <input type="button" value="解答" onclick="nazo();">
+ </p>
 
 
   
