--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="ex07-2.js"></script>
    <script src="ex07-3.js"></script>
    <script src="ex07-4.js"></script>
+   <script src="ex07-5.js"></script>
   
   
 </head>
@@ -158,6 +159,13 @@
  <p>
    答（漢字1文字で）:<input type="text" id="answer">
    <input type="button" value="解答" onclick="nazo();">
+ </p>
+
+   <h1>練習問題7-5　なぞなぞ</h1>
+  <p>目を閉じてないと見られないものはなーに？</p>
+ <p>
+   答（漢字1文字で）:<input type="text" id="answer75">
+   <input type="button" value="解答" onclick="nazo75();">
  </p>
 
 
