--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
    <script src="ex07-3.js"></script>
    <script src="ex07-4.js"></script>
    <script src="ex07-5.js"></script>
+   <script src="ex07-6.js"></script>
   
   
 </head>
@@ -167,6 +168,14 @@
    答（漢字1文字で）:<input type="text" id="answer75">
    <input type="button" value="解答" onclick="nazo75();">
  </p>
+
+  <h1>練習問題7-6　なぞなぞ答え入れ替え</h1>
+  <p>目を閉じてないと見られないものはなーに？</p>
+ <p>
+   答（漢字1文字で）:<input type="text" id="answer76">
+   <input type="button" value="解答" onclick="nazo76();">
+ </p>
+
 
 
   
