--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
    <script src="ex07-4.js"></script>
    <script src="ex07-5.js"></script>
    <script src="ex07-6.js"></script>
+   <script src="ex07-7.js"></script>
   
   
 </head>
@@ -176,6 +177,9 @@
    <input type="button" value="解答" onclick="nazo76();">
  </p>
 
+  <h1>練習問題7-7</h1>
+  <input type="text" id="answer77">
+  <input type=button" value="解答" onclick="nazo77();">
 
 
   
