--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
   <h1>練習問題7-7</h1>
   <input type="text" id="answer77">
-  <input type=button" value="解答" onclick="nazo77();">
+  <input type="button" value="解答" onclick="nazo77();">
 
 
   
