--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
    <script src="ex07-5.js"></script>
    <script src="ex07-6.js"></script>
    <script src="ex07-7.js"></script>
+  <script src="ex07-8.js"></script>
   
   
 </head>
@@ -180,6 +181,11 @@
   <h1>練習問題7-7</h1>
   <input type="text" id="answer77">
   <input type="button" value="解答" onclick="nazo77();">
+  ＝で夢が代入されてそれが解答として使用されるためあたりというalertが呼び出される。
+
+   <h1>練習問題7-8</h1>
+  <input type="text" id="answer78">
+  <input type="button" value="解答" onclick="nazo78();">
 
 
   
