--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
    <script src="ex07-6.js"></script>
    <script src="ex07-7.js"></script>
   <script src="ex07-8.js"></script>
+   <script src="ex07-9.js"></script>
   
   
 </head>
@@ -186,6 +187,10 @@
    <h1>練習問題7-8</h1>
   <input type="text" id="answer78">
   <input type="button" value="解答" onclick="nazo78();">
+
+<h1>練習問題7-9</h1> ひらがなでもあたりになる
+  <input type="text" id="answer79">
+  <input type="button" value="解答" onclick="nazo79();">
 
 
   
