--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <input type="text" id="answer78">
   <input type="button" value="解答" onclick="nazo78();">
 
-<h1>練習問題7-9</h1> ひらがなでもあたりになる
+<h1>練習問題7-9　ひらがなでもあたりになる</h1> 
   <input type="text" id="answer79">
   <input type="button" value="解答" onclick="nazo79();">
 
