--- a/index.html
+++ b/index.html
@@ -180,15 +180,18 @@
  </p>
 
   <h1>練習問題7-7</h1>
+  <p>目を閉じてないと見られないものはなーに？</p>
   <input type="text" id="answer77">
   <input type="button" value="解答" onclick="nazo77();">
   ＝で夢が代入されてそれが解答として使用されるためあたりというalertが呼び出される。
 
    <h1>練習問題7-8</h1>
+  <p>目を閉じてないと見られないものはなーに？</p>
   <input type="text" id="answer78">
   <input type="button" value="解答" onclick="nazo78();">
 
 <h1>練習問題7-9　ひらがなでもあたりになる</h1> 
+  <p>目を閉じてないと見られないものはなーに？</p>
   <input type="text" id="answer79">
   <input type="button" value="解答" onclick="nazo79();">
 
