--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    <script src="ex07-7.js"></script>
   <script src="ex07-8.js"></script>
    <script src="ex07-9.js"></script>
-  
+    <script src="ex07-10.js"></script>
   
 </head>
 <body>
