--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <h1>練習問題7-10 ボディマス指数</h1>
   <p>
     体重（㎏）<input type="text" id="input10">/（身長（ｍ）<input type="text" id="input11">^2）
-    <input type="button" value="計算" onclick="body();">
+    <input type="button" value="計算" onclick="BMI2();">
   </p>
 
 
