--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
   <input type="text" id="answer79">
   <input type="button" value="解答" onclick="nazo79();">
 
-    <h1>練習問題7-10 ボディマス指数</h1>
+    <!--<h1>練習問題7-10 ボディマス指数</h1>
   <p>
     体重（㎏）<input type="text" id="input10">/（身長（ｍ）<input type="text" id="input11">^2）
     <input type="button" id="answer10" value="計算" onclick="BMI2();">
-  </p>
+  </p> -->
 
 
   
